--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"guzzlehttp/guzzle": "6.2.x-dev",
-		"infusionsoft/php-sdk": "1.2.*"
+		"infusionsoft/php-sdk": "1.2.*",
+		"pda/pheanstalk": "~2.0"
 	},
 	"autoload": {
 		"classmap": [
